--- a/PrintingHouse.Client/App.xaml
+++ b/PrintingHouse.Client/App.xaml
@@ -2,8 +2,39 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PrintingHouse.Client"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             xmlns:system="clr-namespace:System;assembly=mscorlib">
     <Application.Resources>
-         
+        <!-- Row height -->
+        <GridLength x:Key="rowHeight">20</GridLength>
+        <system:Int32 x:Key="rowHeightMargin">2</system:Int32>
+        <Style x:Key="GridHeader" TargetType="{x:Type GridViewColumnHeader}">
+            <!-- Remove header separators -->
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
+                        <TextBlock Text="{TemplateBinding Content}" Width="{TemplateBinding Width}" TextAlignment="Center"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="#305496"/>
+        </Style>
+        <Style x:Key="GridHeaderOrders" TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
+                        <Border BorderThickness="0,0,0.4,0" BorderBrush="#305496" Background="Transparent">
+                            <TextBlock Name="ordersHeader" Padding="0,0,0,0" Text="{TemplateBinding Content}" Width="{TemplateBinding Width}" TextAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="FontFamily" Value="Segoe UI"/>
+            <Setter Property="FontSize" Value="12"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="#305496"/>
+        </Style>
     </Application.Resources>
 </Application>
